# Electron-Event-Driven-MVC-Framework

./: DEVDIARY.md  LICENSE  Overlay+twitch+skyrim integration.code-workspace  README.md  SKSE_PLUGIN_GUIDE.md  TESTING.md  build-strudel.js  bundle-venv.ps1  electron-test-main.js  main.js  mod-config.json  overlay-data.json  overlay.config.json  package-lock.json  package.json  preload.js  requirements.txt  skyrim-mod-bridge.py  test-output.txt  test-wheel.js  wheel-options.json  windows-config.json
applications/skyrim/: README.md
controllers/: README.md
controllers/autohotkey/: executor.ahk  notepad-executor.ahk  skyrim-executor.ahk
docs/: MIGRATION-MONOREPO-TO-MULTIREPO.md
scripts/: prepare-package-for-repo.js
skse-plugin/: CMakeLists.txt  OverlayBridge.sln  OverlayBridge.vcxproj  overlay-bridge.cpp
skse-plugin/OverlayBridge/x64/Release/: OverlayBridge.dll.recipe
skse-plugin/OverlayBridge/x64/Release/OverlayBridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OverlayBridge.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
skse-plugin/x64/Release/: OverlayBridge.exp  OverlayBridge.ilk  OverlayBridge.lib
src/: application-config-loader.js  game-config-loader.js  mod-integration.js  preload-generator.js  twitch.js  wheel.js
src/applications/: TEMPLATE.md
src/controllers/: README.md
src/shared/: window-bar.css  window-bar.js
src/windows/: README.md
test/: strudel-parse.test.js
tmp/: wheel-options-test.json
tmp/test-samples/: IMISSMYCATS.strudel  ajp1.strudel  ajp123.txt  (+2 more)
(+44 files in other folders)
